--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
  <body>
      
     <div id="root">
-        <h1>Hello World using simple html</h1>
+        <h1>Hello World using simple html code</h1>
     </div>
 
     <!-- <script >
