--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+ 
+ 
  <!DOCTYPE html>
  <html lang="en">
  <head>
@@ -8,8 +10,11 @@
  <body>
      
     <div id="root">
-        <h1>Hello World using simple html code</h1>
+        <h1>Hello World  simple html code</h1>
     </div>
+
+
+    <script type="module" src="./App.js"></script>
 
     <!-- <script >
        
@@ -21,9 +26,9 @@
 
     </script> -->
 
-   <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script> 
+   <!-- <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script> 
 
-   <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+   <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script> -->
 
    <!-- <script>
   
@@ -35,6 +40,6 @@
 
    </script> -->
 
-   <script src="./App.js"></script>
+   
  </body>
  </html>
